# rolegrep

./: .dockerignore  .env.example  .gitignore  Dockerfile  Project_Brief_Rolegrep.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: watchlist.txt
eval/: README.md  labels.csv  labels_retired.csv
src/rolegrep/: __init__.py  cli.py  config.py  llm.py
src/rolegrep/agent/: __init__.py  graph.py  state.py
src/rolegrep/api/: __init__.py  app.py
src/rolegrep/db/: __init__.py  models.py  repository.py  session.py
src/rolegrep/embeddings/: __init__.py  similarity.py
src/rolegrep/eval/: __init__.py  harness.py  labels.py  matching.py  metrics.py
src/rolegrep/monitor/: __init__.py  runner.py  scheduler.py
src/rolegrep/schemas/: __init__.py  posting.py
src/rolegrep/tools/: __init__.py  check_duplicate.py  extract_posting.py  fetch_page.py
tests/: __init__.py  test_agent.py  test_api.py  test_db.py  test_dedup.py  test_eval.py  test_extract.py  test_fetch_page.py  test_schemas.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  styles.css
