[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rolegrep"
version = "0.1.0"
description = "Agentic internship-monitoring assistant with self-evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6,<3",
    "httpx>=0.27,<1",
    "trafilatura>=1.9,<2",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.2,<6",
]

[project.optional-dependencies]
agent = [
    "langgraph>=0.2,<1",
    "langchain-core>=0.3,<1",
    "langchain-anthropic>=0.3,<1",
    "langchain-openai>=0.2,<1",
    "sentence-transformers>=3.0,<4",
    "numpy>=1.26,<3",
]
api = [
    "sqlalchemy>=2.0,<3",
    "apscheduler>=3.10,<4",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "python-dotenv>=1.0,<2",
]

[project.scripts]
rolegrep-fetch = "rolegrep.cli:main_fetch"
rolegrep-agent = "rolegrep.cli:main_agent"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
